syntax = "proto3";

option csharp_namespace = "Scetia.Source.Item";

import "google/protobuf/empty.proto";
package scetiaItemSourceGet;

service ScetiaItemSourceGetter {
    rpc GetKinds (google.protobuf.Empty) returns (KindsReply);
}

message KindsReply {
    repeated Kind kinds= 1;

    message Kind {
        string kindId = 1;
        string kindName = 2;
        bool canConsign = 3;
    }
}

